<resources>
    <string name="app_name">Aula7_final</string>
    <string name="clear">CE</string>
    <string name="backspace"><![CDATA[<]]></string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="subtraction">-</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="adition">+</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_ultima_conta">Ultima Conta</string>
    <string name="ver_historico">Ver Historico</string>

    <string name="calculator">Calculadora</string>
    <string name="history">Histórico</string>
    <string name="other">Outros</string>
    <string name="sign_out">Sair</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title">Title</string>
    <string name="Navigation_drawer">This is our navigation drawer</string>
</resources>
